# dont

./: CMakeLists.txt  LICENSE  README.md
cmake/: dontConfig.cmake.in
core/include/dont/: append.hpp  common.hpp
include/core/dont/: append.hpp  common.hpp  conditions.hpp  counting.hpp  for_each.hpp  imbue.hpp  map.hpp  merge.hpp  remove.hpp
include/core/dont/detail/: append.hpp  counting.hpp  for_each.hpp  merge.hpp  remove.hpp
include/dont/: append.hpp  common.hpp  conditions.hpp  counting.hpp  for_each.hpp  merge.hpp
include/stl/dont/stl/array/: for_each.hpp
include/stl/dont/stl/array/detail/: for_each.hpp
include/stl/dont/stl/tuple/: for_each.hpp
include/stl/dont/stl/tuple/detail/: for_each.hpp
stl/include/dont/stl/array/: for_each.hpp
test/: CMakeLists.txt
test/core/: test_append.cpp  test_for_each.cpp  test_imbue.cpp  test_map.cpp  test_remove.cpp
test/stl/: test_array_for_each.cpp  test_tuple_for_each.cpp
test/unit/: test_append.cpp  test_counting.cpp  test_for_each.cpp  test_merge.cpp
